<resources>
    <string name="app_name" translatable="false">Apero Android</string>
    <string name="position" translatable="false">position</string>
    <string name="facebook_app_id" translatable="false">1215014202301477</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_gallery">Gallery</string>
    <string name="nav_policy">Policy</string>
    <string name="nav_share">Share</string>
    <string name="nav_more">More App</string>
    <string name="nav_video">Videos</string>
    <string name="communicate">Communicate</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_select_all">select all</string>
    <string name="menu_share">Share</string>


</resources>
